Refactor code structure and remove redundant code blocks for improved readability and maintainability